k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mesa-ingress
spec:
  rules:
    - host: mesaconecta.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mesa-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mesa-web
                port:
                  number: 80
    - host: www.mesaconecta.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mesa-web
                port:
                  number: 80
  tls:
    - hosts:
        - mesaconecta.com
        - www.mesaconecta.com
      secretName: mesaconecta-tls
